cabal-version:      3.0
name:               bms-tacview-filter
version:            0.1.0.0
license:            Zlib
author:             Matt Kline
maintainer:         matt@bitbashing.io
category:           Data
build-type:         Simple

executable bms-tacview-filter
    ghc-options: -Wall -threaded "-with-rtsopts=-N -qg1 -s"
    main-is: Main.hs
    build-depends: base,
                   optparse-applicative,
                   text,
                   unordered-containers,
                   vector
    default-language: Haskell2010
