cabal-version:      3.0
name:               bms-tacview-filter
version:            0.1.0.0
license:            Zlib
author:             Matt Kline
maintainer:         matt@bitbashing.io
category:           Data
build-type:         Simple

common shared
    ghc-options: -Wall -threaded -fno-ignore-asserts -fPIC
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost OverloadedStrings

library channel
    import: shared
    exposed-modules: Control.Concurrent.Channel
    hs-source-dirs: channel
    build-depends: base,
                   async,
                   deepseq,
                   stm

library tacview
    import: shared
    exposed-modules: Data.Tacview
    hs-source-dirs: tacview
    build-depends: base,
                   deepseq,
                   text,
                   unordered-containers,
                   vector

executable bms-tacview-filter
    import: shared
    ghc-options: "-with-rtsopts=-N"
    hs-source-dirs: src
    main-is: Main.hs
    other-modules: Delta,
                   Ignores
    build-depends: base,
                   channel,
                   containers,
                   tacview,
                   time,
                   optparse-applicative,
                   stm,
                   text,
                   unordered-containers,
                   vector
