cabal-version:      3.0
name:               tacview-filter
synopsis:           Shrinks Tacview files
version:            0.2.0.0
license:            Zlib
author:             Matt Kline
maintainer:         matt@bitbashing.io
category:           Data
build-type:         Simple

common shared
    ghc-options: -Wall -Wextra -Wno-x-partial -threaded -fno-ignore-asserts
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost OverloadedStrings

library channel
    import: shared
    exposed-modules: Control.Concurrent.Channel
    hs-source-dirs: channel
    build-depends: base,
                   async,
                   deepseq,
                   stm

library tacview
    import: shared
    exposed-modules: Data.Tacview
    hs-source-dirs: tacview
    build-depends: base,
                   deepseq,
                   text,
                   unordered-containers,
                   vector

executable tacview-filter
    import: shared
    ghc-options: "-with-rtsopts=-N"
    hs-source-dirs: src
    main-is: Main.hs
    other-modules: Delta,
                   Ignores
    build-depends: base,
                   channel,
                   tacview,
                   conduit,
                   containers,
                   optparse-applicative,
                   stm,
                   text,
                   time,
                   unordered-containers,
                   vector,
                   zip
