cabal-version:      3.0
name:               tacview
synopsis:           Tacview codec and Tacview accessories
version:            0.3.0.0
license:            Zlib
author:             Matt Kline
maintainer:         matt@bitbashing.io
category:           Data
build-type:         Simple

common shared
    ghc-options: -Wall -Wextra -Wno-x-partial -threaded -fno-ignore-asserts
    default-language: Haskell2010
    default-extensions: BangPatterns,
                        ImportQualifiedPost,
                        LambdaCase,
                        OverloadedRecordDot,
                        OverloadedStrings,
                        RecordWildCards

common exeopts
    import: shared
    ghc-options: -rtsopts "-with-rtsopts=-N"


library channel
    import: shared
    exposed-modules: Control.Concurrent.Channel
    hs-source-dirs: channel
    build-depends: base,
                   async,
                   deepseq,
                   stm

library
    import: shared
    exposed-modules: Data.Tacview
                     Data.Tacview.Sink
                     Data.Tacview.Source
    hs-source-dirs: lib
    build-depends: base,
                   channel,
                   bytestring,
                   conduit,
                   containers,
                   deepseq,
                   stm,
                   text,
                   unordered-containers,
                   vector,
                   zip

executable tacview-filter
    import: exeopts
    hs-source-dirs: filter
    main-is: Main.hs
    other-modules: Delta,
                   Ignores
    build-depends: base,
                   channel,
                   tacview,
                   ansi-terminal,
                   async,
                   clock,
                   optparse-applicative,
                   stm,
                   text,
                   unordered-containers,
                   vector,
