cabal-version:      3.0
name:               tacview
synopsis:           Tacview codec and Tacview accessories
version:            0.3.0.0
license:            Zlib
author:             Matt Kline
maintainer:         matt@bitbashing.io
category:           Data
build-type:         Simple

common shared
    ghc-options: -Weverything
                 -Wno-all-missed-specialisations
                 -Wno-implicit-prelude
                 -Wno-missed-specialisations
                 -Wno-missing-export-lists
                 -Wno-missing-import-lists
                 -Wno-missing-kind-signatures
                 -Wno-missing-local-signatures
                 -Wno-missing-role-annotations
                 -Wno-missing-safe-haskell-mode
                 -Wno-monomorphism-restriction
                 -Wno-safe
                 -Wno-type-defaults
                 -Wno-unsafe
                 -Wno-x-partial
                 -threaded
                 -fno-ignore-asserts
    default-language: Haskell2010
    default-extensions: BangPatterns,
                        DerivingStrategies,
                        ImportQualifiedPost,
                        LambdaCase,
                        OverloadedRecordDot,
                        OverloadedStrings,
                        RecordWildCards,
                        TupleSections

common exeopts
    import: shared
    ghc-options: -rtsopts "-with-rtsopts=-N"


library channel
    import: shared
    exposed-modules: Control.Concurrent.Channel
    hs-source-dirs: channel
    build-depends: base,
                   async,
                   deepseq,
                   stm

library
    import: shared
    exposed-modules: Data.Tacview
                     Data.Tacview.Sink
                     Data.Tacview.Source
    hs-source-dirs: lib
    build-depends: base,
                   channel,
                   bytestring,
                   conduit,
                   containers,
                   deepseq,
                   stm,
                   text,
                   unordered-containers,
                   vector,
                   zip

executable tacview-filter
    import: exeopts
    hs-source-dirs: filter
    main-is: Main.hs
    other-modules: Delta,
                   Ignores
    build-depends: base,
                   channel,
                   tacview,
                   ansi-terminal,
                   async,
                   clock,
                   optparse-applicative,
                   stm,
                   text,
                   unordered-containers,
                   vector,

executable tacview-replay
    import: exeopts
    hs-source-dirs: replay
    main-is: Main.hs
    build-depends: base,
                   channel,
                   clock,
                   tacview,
                   text,
                   optparse-applicative,
                   stm

executable tacview-server
    import: exeopts
    hs-source-dirs: server
    main-is: Main.hs
    build-depends: base,
                   channel,
                   tacview,
                   async,
                   bytestring,
                   containers,
                   network,
                   stm,
                   text,
                   optparse-applicative,
                   vector

executable test-client
    import: exeopts
    hs-source-dirs: client
    main-is: Main.hs
    build-depends: base,
                   bytestring,
                   network,
                   text
