cabal-version:      3.0
name:               tacview
synopsis:           Tacview codec and Tacview accessories
version:            0.4.1.0
license:            Zlib
author:             Matt Kline
maintainer:         matt@bitbashing.io
category:           Data
build-type:         Simple

common shared
    ghc-options: -Weverything
                 -Wno-all-missed-specialisations
                 -Wno-implicit-prelude
                 -Wno-missed-specialisations
                 -Wno-missing-export-lists
                 -Wno-missing-import-lists
                 -Wno-missing-kind-signatures
                 -Wno-missing-local-signatures
                 -Wno-missing-role-annotations
                 -Wno-missing-safe-haskell-mode
                 -Wno-monomorphism-restriction
                 -Wno-safe
                 -Wno-type-defaults
                 -Wno-unsafe
                 -Wno-x-partial
                 -threaded
                 -fno-ignore-asserts
    default-language: Haskell2010
    default-extensions: BangPatterns,
                        DeriveAnyClass,
                        DeriveGeneric,
                        DerivingStrategies,
                        ImportQualifiedPost,
                        LambdaCase,
                        MultiWayIf,
                        OverloadedRecordDot,
                        OverloadedStrings,
                        RecordWildCards,
                        TupleSections

common exeopts
    import: shared
    ghc-options: -rtsopts "-with-rtsopts=-N"


library
    import: shared
    exposed-modules: Data.Tacview
                     Data.Tacview.Delta
                     Data.Tacview.Ignores
                     Data.Tacview.MinId
                     Data.Tacview.Sink
                     Data.Tacview.Source
    hs-source-dirs: lib
    build-depends: base,
                   bytestring,
                   conduit,
                   containers,
                   directory,
                   hashtables,
                   hoare,
                   stm,
                   text,
                   unordered-containers,
                   vector,
                   zip

executable tacview-filter
    import: exeopts
    hs-source-dirs: filter
    main-is: Main.hs
    other-modules: Delta,
    build-depends: base,
                   containers,
                   hashtables,
                   hoare,
                   tacview,
                   ansi-terminal,
                   async,
                   clock,
                   optparse-applicative,
                   stm,
                   text,

executable tacview-replay
    import: exeopts
    main-is: Replay.hs
    build-depends: base,
                   clock,
                   hoare,
                   optparse-applicative,
                   stm,
                   tacview,
                   text,

executable tacview-server
    import: exeopts
    main-is: Server.hs
    build-depends: base,
                   tacview,
                   async,
                   bytestring,
                   containers,
                   hoare,
                   network,
                   stm,
                   text,
                   optparse-applicative,
                   unordered-containers,
                   vector

executable tacview-stats
    import: exeopts
    main-is: Stats.hs
    build-depends: base,
                   tacview,
                   ansi-terminal,
                   async,
                   containers,
                   clock,
                   hoare,
                   text,
                   optparse-applicative,
                   unordered-containers,

executable test-client
    import: exeopts
    hs-source-dirs: client
    main-is: Main.hs
    build-depends: base,
                   bytestring,
                   network,
                   text
